--- a/.github/workflows/stale.yaml
+++ b/.github/workflows/stale.yaml
@@ -19,11 +19,20 @@ jobs:
           exempt-pr-labels: bug,pinned,security,planned
           stale-issue-label: "stale"
           stale-pr-label: "stale"
-          stale-issue-message: |
-            This issue has been marked 'stale' due to lack of recent activity. If there is no further activity, the issue will be closed in another 30 days. Thank you for your contribution!
-            This issue has been closed due to inactivity. If you feel this is in error, please reopen the issue or file a new issue with the relevant details.
-          stale-pr-message: |
-            This pr has been marked 'stale' due to lack of recent activity. If there is no further activity, the issue will be closed in another 30 days. Thank you for your contribution!
-          close-pr-message: |
-            This pr has been closed due to inactivity. If you feel this is in error, please reopen the issue or file a new issue with the relevant details.
+          stale-issue-message: >
+            This issue has been marked 'stale' due to lack of recent activity.
+            If there is no further activity, the issue will be closed in another 30 days.
+            Thank you for your contribution!
+            This issue has been closed due to inactivity.
+            If you feel this is in error,
+            please reopen the issue or file a new issue with the relevant details.
+          stale-pr-message: >
+            This pr has been marked 'stale' due to lack of recent activity.
+            If there is no further activity,
+            the issue will be closed in another 30 days.
+            Thank you for your contribution!
+          close-pr-message: >
+            This pr has been closed due to inactivity.
+            If you feel this is in error,
+            please reopen the issue or file a new issue with the relevant details.
           repo-token: ${{ secrets.GITHUB_TOKEN }}
