--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -58,7 +58,8 @@ jobs:
           python-version: '3.x'
 
       - name: Install test dependencies.
-        run: pip3 install ansible molecule molecule-plugins[docker] pytest-testinfra docker
+        run: |
+          pip3 install ansible molecule molecule-plugins[docker] pytest-testinfra docker
 
       - name: Run Molecule tests.
         run: molecule test
