--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -33,8 +33,12 @@ jobs:
 
       - name: Install Ansible.
         run: pip3 install ansible-core
-
+        
       - name: Publish to Galaxy
-        uses: robertdebock/galaxy-action@1.2.1
-        with:
-          galaxy_api_key: ${{ secrets.GALAXY_API_KEY }}
+        run: >-
+          ansible-galaxy role import --api-key ${{ secrets.GALAXY_API_KEY }}
+          $(echo ${{ github.repository }} | cut -d/ -f1) $(echo ${{ github.repository }} | cut -d/ -f2)
+      # - name: Publish to Galaxy
+      #   uses: robertdebock/galaxy-action@1.2.1
+      #   with:
+      #     galaxy_api_key: ${{ secrets.GALAXY_API_KEY }}
