--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,11 +6,11 @@ on:
       - main
   pull_request:
   schedule:
-    - cron: '0 6 * * 0'  # Weekly at 06:00 UTC on Sunday
+    - cron: "0 6 * * 0" # Weekly at 06:00 UTC on Sunday
 
 defaults:
   run:
-    working-directory: 'moreskylab.apache'
+    working-directory: "moreskylab.apache"
 
 jobs:
   lint:
@@ -20,12 +20,12 @@ jobs:
       - name: Check out the codebase.
         uses: actions/checkout@v4
         with:
-          path: 'moreskylab.apache'
+          path: "moreskylab.apache"
 
       - name: Set up Python 3.
         uses: actions/setup-python@v5
         with:
-          python-version: '3.x'
+          python-version: "3.x"
 
       - name: Install test dependencies.
         run: pip3 install yamllint ansible-lint
@@ -50,12 +50,12 @@ jobs:
       - name: Check out the codebase.
         uses: actions/checkout@v4
         with:
-          path: 'moreskylab.apache'
+          path: "moreskylab.apache"
 
       - name: Set up Python 3.
         uses: actions/setup-python@v5
         with:
-          python-version: '3.x'
+          python-version: "3.x"
 
       - name: Install test dependencies.
         run: |
@@ -65,5 +65,5 @@ jobs:
         run: molecule test
         env:
           MOLECULE_DISTRO: ${{ matrix.distro }}
-          PY_COLORS: '1'
-          ANSIBLE_FORCE_COLOR: '1'
+          PY_COLORS: "1"
+          ANSIBLE_FORCE_COLOR: "1"
