--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -6,14 +6,14 @@
 # See: https://github.com/ansible/galaxy/issues/46
 
 name: Release to Ansible Galaxy
-'on':
+"on":
   push:
     tags:
-      - 'v*'
+      - "v*"
 
 defaults:
   run:
-    working-directory: 'moreskylab.apache'
+    working-directory: "moreskylab.apache"
 
 jobs:
 
@@ -24,21 +24,21 @@ jobs:
       - name: Check out the codebase.
         uses: actions/checkout@v4
         with:
-          path: 'moreskylab.apache'
+          path: "moreskylab.apache"
 
       - name: Set up Python 3.
         uses: actions/setup-python@v5
         with:
-          python-version: '3.x'
+          python-version: "3.x"
 
       - name: Install Ansible.
         run: pip3 install ansible-core
-        
+
       - name: Publish to Galaxy
         run: >-
           ansible-galaxy role import --api-key ${{ secrets.GALAXY_API_KEY }}
           $(echo ${{ github.repository }} | cut -d/ -f1) $(echo ${{ github.repository }} | cut -d/ -f2)
-      # - name: Publish to Galaxy
+ # - name: Publish to Galaxy
       #   uses: robertdebock/galaxy-action@1.2.1
       #   with:
       #     galaxy_api_key: ${{ secrets.GALAXY_API_KEY }}
