--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -19,3 +19,9 @@ provisioner:
   name: ansible
   playbooks:
     converge: ${MOLECULE_PLAYBOOK:-converge.yml}
+  lint:
+    name: ansible-lint
+verifier:
+  name: testinfra
+  lint:
+    name: flake8
