--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -21,7 +21,7 @@ provisioner:
     converge: ${MOLECULE_PLAYBOOK:-converge.yml}
   lint:
     name: ansible-lint
-verifier:
-  name: testinfra
-  lint:
-    name: flake8
+      #verifier:
+      #  name: testinfra
+      #  lint:
+      #    name: flake8
