added moreskylab username/repository name to role in molecule coverage file

--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -14,4 +14,4 @@
   tasks:
     - name: Include the apache role
       ansible.builtin.include_role:
-        name: apache
+        name: moreskylab.apache
