--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -12,6 +12,9 @@
         document_root: /var/www/test
 
   tasks:
+    - name: Update package cache
+      ansible.builtin.package:
+        update_cache: yes
     - name: Include the apache role
       ansible.builtin.include_role:
         name: moreskylab.apache
