changed and fixed error 'Truthy value should be one of  [false, true]' from ansible lint in update task in converge file of molecule

--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -14,7 +14,7 @@
   tasks:
     - name: Update package cache
       ansible.builtin.package:
-        update_cache: yes
+        update_cache: true
     - name: Include the apache role
       ansible.builtin.include_role:
         name: moreskylab.apache
