fixedq:q! ansible lint

--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -11,8 +11,10 @@
         server_name: test.example.com
         document_root: /var/www/test
   pre_tasks:
-    - name: Update apt cache.
-      ansible.builtin.apt: update_cache=yes cache_valid_time=600
+    - name: "Update apt cache."
+      ansible.builtin.apt:
+        update_cache: true
+        cache_valid_time: 600
       when: ansible_os_family == 'Debian'
       changed_when: false
   tasks:
