firewall package added

--- a/vars/RedHat.yml
+++ b/vars/RedHat.yml
@@ -6,6 +6,7 @@ apache_config_path: /etc/httpd/conf/httpd.conf
 apache_vhosts_path: /etc/httpd/conf.d
 apache_modules_path: /etc/httpd/modules
 apache_packages:
+  - firewalld
   - httpd
   - mod_ssl
   - openssl
