--- a/vars/Debian.yml
+++ b/vars/Debian.yml
@@ -6,5 +6,6 @@ apache_config_path: /etc/apache2/apache2.conf
 apache_vhosts_path: /etc/apache2/sites-available
 apache_modules_path: /usr/lib/apache2/modules
 apache_packages:
+  - ufw
   - apache2
   - ssl-cert
